<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPA++</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="classname">Class Name:</string>
    <string name="location">Location:</string>
    <string name="schedule">Schedule:</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_class_details_edit">Class Details</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_todo">Add To-do Task</string>
    <string name="findLocation">Find Location</string>
    <string name="lecture">Lecture1</string>
    <string name="recordVisualNotes">Record Visual Notes</string>
    <string name="upcoming_tasks">Upcoming To-do Tasks:</string>
    <string name="recordAudioNotes">Record Audio Notes</string>
    <string name="upcoming_classes">Upcoming Classes:</string>
    <string name="viewTodoList">View To-do List</string>
    <string name="button">Button</string>
    <string name="viewClassHistory">View Class History</string>
    <string name="add_classes">Add Classes</string>
    <string name="sampleClassName">18641</string>
    <string name="sampleLocation">HH 1107</string>
    <string name="sampleSchedule">10:30am - 12:30pm</string>
    <string name="sampleTaskName">18641 Assignment 3</string>
    <string name="taskName">Task Name:</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_edit_class">Edit Class Details</string>
    <string name="title_activity_class_history">Class History</string>
    <string name="title_activity_add_schedule">AddScheduleActivity</string>

    <string-array name="whichDay">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>

    <string name="title_activity_take_photo">TakePhotoActivity</string>
    <string name="title_activity_record">View Notes</string>
    <string name="class_id">Class ID:</string>
    <string name="view_calendar">View Calendar</string>
    <string name="delete_class">Delete Class</string>
    <string name="note_name">Give your note a name:</string>
    <string name="note_category">Which lecture does this note belong to?</string>
    <string name="visual_notes">Visual Notes:</string>
    <string name="audio_notes">Audio Notes:</string>
    <string name="lectures">Lectures:</string>
    <string name="title_activity_edit_task">Edit To-do Task</string>
    <string name="select_date">Please select a date:</string>
    <string name="select_time">Please select a time:</string>
    <string name="choose_start_time">Please choose start time:</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="due_date">Due Date:</string>
    <string name="priority">Priority:</string>
    <string name="delete">Delete</string>
    <string name="choose_time">Please pick a time:</string>

</resources>
