<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditClass" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical" >

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:clickable="false"
            android:text="@string/classname"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/et_classname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="Java Smart Phone"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical" >

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:clickable="false"
            android:text="@string/class_id"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/et_classID"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="18641"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical" >

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:clickable="false"
            android:text="@string/location"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/et_classlocation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="HH 1107"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical" >

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:clickable="false"
            android:text="@string/start_date"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/et_startdate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="Tap here to select date"
            android:inputType="date" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical" >

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:clickable="false"
            android:text="@string/end_date"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/et_enddate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="Tap here to select date"
            android:inputType="date" />

    </LinearLayout>

    <ListView
        android:id="@+id/editClass_lv_schedule"
        android:layout_width="match_parent"
        android:layout_height="150dp" >
    </ListView>

    <Button
        android:id="@+id/bt_addSched"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_blue"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/add_schedule" />
    
    <Button
        android:id="@+id/ec_okay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_blue"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="8sp"
        android:text="@string/ok" />

</LinearLayout>